@@ -11,6 +11,8 @@ PHP                                                                        NEWS
 - Fixed bug #49851 (http wrapper breaks on 1024 char long headers). (Ilia)
 - Fixed bug #45599 (strip_tags() truncates rest of string with invalid
   attribute). (Ilia, hradtke)
+- Fixed bug #47002 (Field truncation when reading from dbase dbs with more
+  then 1024 fields). (Ilia, sjoerd-php at linuxonly dot nl)
 
 17 Dec 2009, PHP 5.2.12
 - Updated timezone database to version 2009.19 (2009s). (Derick)
